codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_includes_reasoning_details.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭─────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v1.0.0-local-26f7c468)                            │
│                                                                     │
│  Model:            gpt-5-codex (reasoning high, summaries detailed) │
│  Directory: [[workspace]]                                           │
│  Approval:         on-request                                       │
│  Sandbox:          workspace-write                                  │
│  Agents.md:        <none>                                           │
│                                                                     │
│  Token usage:      1.9K total  (1K input + 900 output)              │
│  Context window:   100% left (2.1K used / 272K)                     │
│  5h limit:         [███████████████░░░░░] 72% used (resets 03:14)   │
│  Weekly limit:     [█████████░░░░░░░░░░░] 45% used (resets 03:24)   │
╰─────────────────────────────────────────────────────────────────────╯
